Next release (on 1.1 branch)
============================

Documentation
-------------

- Documentation ``..note`` and ``..warning`` fixes.

1.1.2 (2011-08-17)
==================

Bug Fixes
---------

- Fix ``pyramid.config.preserve_view_attrs`` to not choke when the view it is
  passed is ``None`` (FBO: pyramid_formish).

- Fixed an issue with the default renderer not working at certain times.  See
  https://github.com/Pylons/pyramid/issues/249 (backport from trunk).

1.1.1 (2011-08-13)
==================

Backported Features
-------------------

- Backport from 1.2dev: A new attribute is available on request objects:
  ``exc_info``.  Its value will be ``None`` until an exception is caught
  by the Pyramid router, after which it will be the result of
  ``sys.exc_info()``.

1.1 (2011-07-22)
================

Features
--------

- Added the ``pyramid.renderers.null_renderer`` object as an API.  The null
  renderer is an object that can be used in advanced integration cases as
  input to the view configuration ``renderer=`` argument.  When the null
  renderer is used as a view renderer argument, Pyramid avoids converting the
  view callable result into a Response object.  This is useful if you want to
  reuse the view configuration and lookup machinery outside the context of
  its use by the Pyramid router.  This feature was added for consumption by
  the ``pyramid_rpc`` package, which uses view configuration and lookup
  outside the context of a router in exactly this way.  ``pyramid_rpc`` has
  been broken under 1.1 since 1.1b1; adding it allows us to make it work
  again.

- Change all scaffolding templates that point to docs.pylonsproject.org to
  use ``/projects/pyramid/current`` rather than ``/projects/pyramid/dev``.

Internals
---------

- Remove ``compat`` code that served only the purpose of providing backwards
  compatibility with Python 2.4.

- Add a deprecation warning for non-API function