@@ -88,6 +88,9 @@ setup(name='pyramid',
         pviews=pyramid.paster:PViewsCommand
         [console_scripts]
         bfg2pyramid = pyramid.fixers.fix_bfg_imports:main
+        [paste.server_runner]
+        wsgiref = pyramid.paster:wsgiref_server_runner
+        cherrypy = pyramid.paster:cherrypy_server_runner
       """
       )
 
