@@ -10,10 +10,31 @@ deps =
     WebTest
     repoze.sphinx.autointerface
     virtualenv
+    zope.configuration<3.8.0
+
+[testenv:py25]
+commands = 
+    python setup.py test -q
+deps =
+    https://github.com/Pylons/webob/zipball/1.1-branch
+    Sphinx
+    WebTest
+    repoze.sphinx.autointerface
+    virtualenv
+    zope.configuration<3.8.0
+    zope.schema<4.0.0
 
 [testenv:jython]
 commands = 
-   jython setup.py test -q
+    jython setup.py test -q
+deps =
+    https://github.com/Pylons/webob/zipball/1.1-branch
+    Sphinx
+    WebTest
+    repoze.sphinx.autointerface
+    virtualenv
+    zope.configuration<3.8.0
+    zope.schema<4.0.0
 
 [testenv:cover]
 basepython =
@@ -28,8 +49,8 @@ deps =
     nose
     coverage==3.4
     nosexcover
+    zope.configuration<3.8.0
 
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
 # combination of versions of coverage and nosexcover that i can find.
-
